# esp-liboqs

./: .gitignore  CMakeLists.txt  Kconfig  LICENSE  README.md  idf_component.yml
examples/kem_basic/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/kem_basic/main/: CMakeLists.txt  kem_basic.c
examples/signature_basic/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/signature_basic/main/: CMakeLists.txt  signature_basic.c
include/: esp_liboqs.h
src/: esp_liboqs_init.c  esp_rand_adapter.c
